# threadscope-test

./: Makefile  README.md  stack.yaml  threadscope-test-exe.eventlog  threadscope-test-exe.prof  threadscope-test.cabal
app/: Main.hs
