name:                threadscope-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/supermario/threadscope-test#readme
license:             BSD3
license-file:        LICENSE
author:              Mario Rogic
maintainer:          hello@mario.net.au
copyright:           2017 Mario Rogic
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable threadscope-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -rtsopts -eventlog -threaded
  build-depends:       base
                     , threadscope-test
                     , parallel
  default-language:    Haskell2010

test-suite threadscope-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , threadscope-test

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/supermario/threadscope-test
